CourseTrigger/force-app/main/default/objects/Subject__c/fields/Lesson_Duration__c.field-meta.xml
<CustomField>
    <fullName>Lesson_Duration__c</fullName>
    <description>Lesson Duration</description>
    <label>Lesson Duration</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>