CourseTrigger/force-app/main/default/objects/Subject__c/fields/Number_of_Lessons__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Lessons__c</fullName>
    <description>Number of Lessons</description>
    <label>Number of Lessons</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>